# chat-migracion

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test.ipynb  vercel.json
src/: app.py  main.py
src/db/: mongo.py
src/graph/: nodes.py  tools.py  workflow.py
src/utils/: whisper_transcription.py
